---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2021.01.08
  Changes:
    - Added a setting to always unlock the ore-move planner
    - If the setting is false(default) the ore-move planner will be unlocked with the rocket silo
  Bugfixes:
    - Fixed a crash related to the ore-move planner shortcut
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2020.11.26
  Info:
    - Updated for Factorio version 1.1.0