@@ -6,6 +6,7 @@ Date: 2021.01.08
     - If the setting is false(default) the ore-move planner will be unlocked with the rocket silo
   Bugfixes:
     - Fixed a crash related to the ore-move planner shortcut
+    - Fixed a crash that occured when selecting no ores between copying and pasting something
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.0
 Date: 2020.11.26
